cluster/network/traefik/forward-auth/whoami/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: default
  labels:
    app: whoami
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
  selector:
    app: whoami
