cluster/network/traefik/forward-auth/whoami/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: default
  labels:
    app: whoami
spec:
  entryPoints:
    - https
  routes:
    - match: Host(`whoami.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: whoami
          port: 80
      middlewares:
        - name: traefik-forward-auth
  tls:
    certresolver: default
